<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:contentDescription="@string/content_main_image_content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_cloud_download_24"
        app:tint="@color/download_image_tint" />

    <RadioGroup
        android:id="@+id/download_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/content_main_default_padding"
        app:layout_constraintBottom_toTopOf="@+id/custom_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <RadioButton
            android:id="@+id/glide_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/glide_radioButton_text"
            android:padding="@dimen/content_main_default_padding"/>

        <RadioButton
            android:id="@+id/load_app_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loadapp_radioButton_text"
            android:padding="@dimen/content_main_default_padding" />

        <RadioButton
            android:id="@+id/retrofit_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retrofit_radioButton_text"
            android:padding="@dimen/content_main_default_padding" />
    </RadioGroup>

    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:bgColor="@color/colorPrimary"
        app:circleProgressColor="@color/colorAccent"
        app:loadingBgColor="@color/colorPrimaryDark"
        app:loadingText="Loading"
        app:text="Download"
        app:textColor="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>